--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -316,7 +316,7 @@
         <!-- Author -->
           <div class="author-bio">
             <div class="col-md-3">
-              <img class="author-image"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
+              <img class="author-image"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "{{audiodocs[0].author_name | safe}}">
             </div>
             <div class="col-md-3">
               <div class="author-name">
