added a better <title> tag to pages

--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -18,7 +18,7 @@
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
-  <title>Know it Wall</title>
+  <title>All episodes - Know it Wall</title>
 
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
