--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -19,7 +19,7 @@
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
-  <title>Know it Wall</title>
+  <title>Know it Wall - home page</title>
 
   <link href="/static/css/audioplayer.css" rel="stylesheet">
 
