--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -18,7 +18,7 @@
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
-  <title>Know it Wall</title>
+  <title>{{audiodocs[0].topic_name}} - Know it Wall</title>
 
   <link href="/static/css/audioplayer.min.css" rel="stylesheet">
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
