more accessibility stuff

--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -18,7 +18,7 @@
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
-  <title>All episodes - Know it Wall</title>
+  <title>All episodes | Know it Wall</title>
 
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
@@ -60,6 +60,7 @@ hidden
           <!-- svg shizzle -->
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              width="100%" height="52.5px" viewBox="0 0 302.5 52.5" enable-background="new 0 0 302.5 52.5" xml:space="preserve">
+             <title>Know it wall - home page</title>
             <g>
               <g id="layer1_1_" transform="translate(-241.83035,-280.77737)">
                 <path id="text2413_1_" fill="#FFFFFF" d="M277.766,299.816c-0.913,6.336-1.37,10.757-1.37,13.264c0,5.216,1.341,7.824,4.022,7.824
