--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -19,7 +19,7 @@
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
-  <title>Know it Wall</title>
+  <title>Know it Wall | home page</title>
 
   <link href="/static/css/audioplayer.css" rel="stylesheet">
 
@@ -74,6 +74,7 @@
     <!-- svg shizzle -->
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
        width="100%" height="52.5px" viewBox="0 0 302.5 52.5" enable-background="new 0 0 302.5 52.5" xml:space="preserve">
+       <title>Know it wall - home page</title>
       <g>
         <g id="layer1_1_" transform="translate(-241.83035,-280.77737)">
           <path id="text2413_1_" fill="#FFFFFF" d="M277.766,299.816c-0.913,6.336-1.37,10.757-1.37,13.264c0,5.216,1.341,7.824,4.022,7.824
