--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -270,7 +270,7 @@
 
 
   <header id="header_no_player" style="background:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.6)), url('{{ audiodocs[0].topic_image }}'); background-repeat: no-repeat; background-size:cover;">
-      <div class="container container_video" style="padding-bottom:230px">
+      <div class="container container_video" style="">
         <div class="row">
 
           <div style="margin-bottom:30px;">
@@ -284,7 +284,7 @@
             </svg>
           </div>
           <div class="col-lg-10 col-lg-offset-1 text-center">
-               <div class="episode-title" style="font-size:42px; background-color:transparent; color:white">
+               <div class="episode-title episode-title_video" style="background-color:transparent; color:white">
               {{audiodocs[0].topic_name | safe}}
             </div>
           </div>
