--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -273,8 +273,8 @@
       <div class="container container_video" style="">
         <div class="row">
 
-          <div style="margin-bottom:30px;">
-            <svg width = "100px" height="100px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 1194.8 1194.8" style="enable-background:new 0 0 1194.8 1194.8;" xml:space="preserve">
+          <div class="video_button_wrapper">
+            <svg height="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 1194.8 1194.8" style="enable-background:new 0 0 1194.8 1194.8;" xml:space="preserve">
             <style type="text/css">
               .st0{fill:none;stroke:#FFFFFF;stroke-width:20;stroke-miterlimit:10;}
               .st1{fill:white}
@@ -289,7 +289,7 @@
             </div>
           </div>
 
-          <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%;font-size:18px">
+          <div class="col-lg-10 col-lg-offset-1 text-center page-scroll video_author_info" style="">
              <i style="color: white">by</i> <span class="highlight" style="background-color:transparent;color:white">{{audiodocs[0].author_name | safe}}</span> <i style="color: white">in</i> <span style="background-color:transparent; color:white"class="highlight">{{audiodocs[0].discipline}} </span>
 
         </div>
