audiodoc annotation page: abstract is justified

--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -338,7 +338,7 @@
     <div class="container previous-audiodoc audiodoc_page_box">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center" >
-          <p class="audiodoc_bio">{{audiodocs[0].topic_description | safe}}</p>
+          <p class="audiodoc_abstract">{{audiodocs[0].topic_description | safe}}</p>
           <p class="audiodoc_narrate-credits">narrated by {{ audiodocs[0].narration_credits }}</p>
           <p class="audiodoc_narrate-credits">music by {{ audiodocs[0].music_credits }}</p>
         </div>
