forgery episode: audio and transcripts typos

--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -533,8 +533,8 @@ episode url: {{bige.url}}
           </div>
               <div class="vertical-line">
               <p class = 'justify'>
-                If you are an academic – or know one – whose research is too interesting to be confined to academic circles, then just get in touch.
-                Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject
+                If you are an academic — or know one — whose research is too interesting to be confined to academic circles, then just get in touch.
+                Our community of academics spans PhDs in mathematics to lecturers in philosophy — there’s really no subject
                 we’re not interested in. The process is simple: the academic sends us the text, and we do the rest. So drop us a line at team@knowitwall.com
                 with your details, institution and area of research.
               </p>
