--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -305,7 +305,7 @@
         {% for elem in audiodocs[0:1] %}
 
           <div class="col-md-12 homepage_box_col homepage_box_first_col">
-            <a href="episodes/{{elem.url}}" target="_blank">
+            <a href="episodes/{{elem.url}}">
 
 
                 <!-- for mobile: normal topic_image -->
@@ -349,7 +349,7 @@
         {% for elem in audiodocs[1:3] %}
           <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
 
-            <a href="episodes/{{elem.url}}" target="_blank">
+            <a href="episodes/{{elem.url}}">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
               <div class="homepage_overlay">
 
@@ -408,7 +408,7 @@
         {% for elem in audiodocs[3:5] %}
           <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
 
-            <a href="episodes/{{elem.url}}" target="_blank">
+            <a href="episodes/{{elem.url}}">
               <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
                 <div class="homepage_overlay">
                    <p class="box_episode_title">
@@ -439,7 +439,7 @@
         {% for elem in audiodocs[5:7] %}
           <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
 
-            <a href="episodes/{{elem.url}}" target="_blank" class="">
+            <a href="episodes/{{elem.url}}">
               <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
                 <div class="homepage_overlay">
 
@@ -471,7 +471,7 @@
         {% for elem in audiodocs[7:9] %}
           <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
 
-            <a href="episodes/{{elem.url}}" target="_blank" class="">
+            <a href="episodes/{{elem.url}}">
               <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
                 <div class="homepage_overlay">
                    <p class="box_episode_title">
