--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,15 +8,17 @@
   <div class="footer-above">
     <div class="container">
       <div class="row">
-
-        <div class="col-md-4 col-md-offset-4 ">
-          <h3>We're social too</h3>
+        <div class="col-md-6 col-md-offset-3">
+          <h3>Follow us</h3>
           <ul class="list-inline">
             <li>
-              <a href="https://itunes.apple.com/gb/podcast/know-it-wall/id1078105018" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-apple"></i></a>
+              <a href="https://www.youtube.com/channel/UC4K0QldO7bhHuDlfEe_qZYw" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube-play"></i></a>
             </li>
             <li>
               <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
+            </li>
+            <li>
+              <a href="https://itunes.apple.com/gb/podcast/know-it-wall/id1078105018" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-apple"></i></a>
             </li>
             <li>
               <a href="https://medium.com/know-it-wall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
