--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,9 @@
               <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
             </li>
             <li>
+              <a href="https://www.facebook.com/KnowitWall/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+            </li>
+            <li>
               <a href="http://feeds.soundcloud.com/users/soundcloud:users:193446703/sounds.rss" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-rss"></i></a>
             </li>
           </ul>
