--- a/app/static/css/homepage_redesign.css
+++ b/app/static/css/homepage_redesign.css
@@ -187,7 +187,7 @@ browser for some reason.. */
 }
 @media(min-width:900px){
   #all_episodes{
-    margin-right: 27px;
+    /*margin-right: 27px;*/
   }
 }
 
