about section: font size fix

--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -397,7 +397,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="vertical-line">
+              <div class="vertical-line about_description">
               <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
               <br>
               <p class = 'justify'>We work with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
