--- a/app/static/css/homepage_redesign.css
+++ b/app/static/css/homepage_redesign.css
@@ -16,6 +16,11 @@ browser for some reason.. */
   border-radius:6px;
   margin-left: 12px;
   margin-right: 12px;
+  /* to make the 'About' description vertically centered */
+  padding-bottom: 74px;
+}
+.about_description{
+  font-size: 11px;
 }
 @media(max-width: 415px){
   p{
