--- a/app/static/css/episode_page.css
+++ b/app/static/css/episode_page.css
@@ -54,3 +54,20 @@ text-align: justify;
     text-align: left;
   }
 }
+/* this is added to the audiodoc page navbar to position the links properly */
+.navbarADpage {
+  padding: 0px 400px 20.5px 20px;
+}
+.navbarADpage_video {
+  padding: 0px 250px 20.5px 20px;
+}
+@media(max-width: 768px){
+  .navbarADpage {
+    padding: 0px 0px 20.5px 20px;
+  }
+}
+@media(max-width: 1200px) and (min-width:767px){
+  .navbarADpage {
+    padding: 0px 0px 20.5px 20px;
+  }
+}
