--- a/app/static/css/homepage.css
+++ b/app/static/css/homepage.css
@@ -75,3 +75,72 @@
   background-color: #33353d;
   border-color: #fff;
 }
+
+/* contact form on the homepage stuff */
+.floating-label-form-group {
+    position: relative;
+    margin-bottom: 0;
+    padding-bottom: .5em;
+    border-bottom: 3px solid #33353D;
+    border-left: 3px solid #33353D;
+    border-right: 3px solid #33353D;
+}
+.floating-label-form-group input,
+.floating-label-form-group textarea {
+    z-index: 1;
+    position: relative;
+    padding-right: 0;
+    padding-left: 0;
+    border: 0;
+    border-radius: 0;
+    font-size: 1.5em;
+    background: 0 0;
+    box-shadow: none!important;
+    resize: none;
+}
+
+.floating-label-form-group label {
+    display: block;
+    z-index: 0;
+    position: relative;
+    top: 2em;
+    margin: 0;
+    font-size: .85em;
+    line-height: 1.764705882em;
+    vertical-align: middle;
+    vertical-align: baseline;
+    opacity: 0;
+    -webkit-transition: top .3s ease,opacity .3s ease;
+    -moz-transition: top .3s ease,opacity .3s ease;
+    -ms-transition: top .3s ease,opacity .3s ease;
+    transition: top .3s ease,opacity .3s ease;
+}
+
+.floating-label-form-group::not(:first-child) {
+    padding-left: 14px;
+    border-left: 1px solid #33353D;
+}
+/* contact form section */
+#contact {
+background-color: #FFC21C;
+color:#33353d;
+padding: 100px 5% 100px 5%;
+}
+form .row:first-child .floating-label-form-group {
+    border-top: 3px solid #33353D;
+}
+.form-control::-moz-placeholder {
+  color: #CD9E1E;
+  opacity: 1;
+ }
+   .form-control:-ms-input-placeholder {
+   color: #CD9E1E;
+ }
+ .form-control::-webkit-input-placeholder {
+ color: #CD9E1E;
+ }
+
+.overflow {
+  overflow-x:hidden;
+  background-color: white;
+}
