--- a/app/static/css/knowitwall_base.css
+++ b/app/static/css/knowitwall_base.css
@@ -4,7 +4,7 @@
 
 /* BASIC STUFF (from the default bootstrap theme) */
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 	color:#33353d;
   background-color: white;
 }
@@ -64,6 +64,221 @@ label {
   background-color: #FFC21C;
   border-radius: 5px;
   }
+ /* positioning of elements in the nav bar (namely: paddings) */
+.navbar-brand {
+  padding: 0px 100px 20.5px 20px;
+}
+@media(max-width: 1200px) and (min-width:768px){
+  .navbar-brand {
+    padding: 0px 0px 20.5px 20px;
+  }
+  .navbarADpage {
+    padding: 0px 70px 20.5px 20px;
+  }
+}
+@media(max-width:400px) {
+  .navbar-brand {
+    padding: 0;
+    max-width:250px;
+    width:70%;
+  }
+}
+.navbar-default .navbar-toggle {
+  border-color: #FFFFFF;
+}
+@media(min-width:768px) {
+/* this says how  the nav bar transition happens, but not when */
+    .navbar-fixed-top {
+        padding: 25px 0;
+        -webkit-transition: padding .3s;
+        -moz-transition: padding .3s;
+        transition: padding .3s;
+    }
+    .navbar-fixed-top .navbar-brand {
+        font-size: 2em;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s;
+    }
+
+    .navbar-fixed-top {
+        padding: 10px 0;
+		background-color:#27282D;
+    }
+
+    .navbar-fixed-top .navbar-brand {
+        font-size: 1.5em;
+    }
+}
+@media (max-width: 991px) {
+  .navbar-fixed-top .navbar-brand {
+  font-size: 1.5em;
+  }
+}
+.navbar {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+}
+@media (max-width: 993px){
+  .navbar-right {
+    font-size: .8em;
+  }
+}
+/* make the navbar solid throughout */
+.navbar-default {
+    padding: 10px 0;
+    background-color: #27282D;
+}
+@media(max-width:400px) {
+.navbar-brand {
+    padding: 0;
+    max-width:250px;
+    width:70%;
+  }
+}
+@media(max-width:768px) {
+  .navbar-default {
+    background-color: #27282D;
+    border-color: transparent;
+    padding: 0px
+  }
+}
+.navbar a:focus {
+    outline: 0;
+}
+.navbar .navbar-nav {
+    letter-spacing: 1px;
+}
+
+.navbar .navbar-nav li a:focus {
+    outline: 0;
+}
+/* for twitter and facebook buttons on navabar */
+.nav>li>a.navbar_social{
+  padding-left: 8px;
+  padding-right: 8px;
+}
+/* END OF NAVBAR STUFF */
+
+section {
+    padding: 70px 0;
+}
+section h2 {
+    margin: 0;
+    font-size: 2.5em;
+      text-align: center;
+}
+
+section.success {
+    color: #fff;
+    background: #33353d;
+}
+@media(max-width:767px) {
+    section {
+        padding: 40px 0;
+        background-color: #fff;
+    }
+
+    section.first {
+        padding-top: 75px;
+    }
+}
+section {
+    padding: 70px 0;
+}
+section h2 {
+    margin: 0;
+    font-size: 2.5em;
+      text-align: center;
+}
+
+section.success {
+    color: #fff;
+    background: #33353d;
+}
+@media(max-width:767px) {
+    section {
+        padding: 40px 0;
+        background-color: #fff;
+    }
+
+    section.first {
+        padding-top: 75px;
+    }
+}
+
+
+footer {
+    color: #fff;
+}
+
+footer h3 {
+    margin-bottom: 30px;
+
+}
+
+footer .footer-above {
+    padding-top: 7px;
+    background-color: #33353d;
+}
+
+footer .footer-col {
+    margin-bottom: 50px;
+}
+
+footer .footer-below {
+    padding: 25px 0;
+    background-color: #33353D;
+}
+
+/* social media buttons in the footer */
+.btn-social {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #fff;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 20px;
+    line-height: 45px;
+}
+.btn-outline {
+    margin-top: 15px;
+    border: solid 2px #fff;
+    font-size: 20px;
+    color: #fff;
+    background: 0 0;
+    transition: all .3s ease-in-out;
+}
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline:active,
+.btn-outline.active {
+    border: solid 2px #fff;
+    color: #33353d;
+    background: #fff;
+}
+.btn:focus,
+.btn:active,
+.btn.active {
+    outline: 0;
+}
+.scroll-top {
+    z-index: 1049;
+    position: fixed;
+    right: 2%;
+    bottom: 2%;
+    opacity: 0.8
+    width: 50px;
+    height: 50px;
+}
+.scroll-top .btn {
+    border-radius: 100%;
+}
+.scroll-top .btn:focus {
+    outline: 0;
+}
 
 
 
@@ -99,18 +314,28 @@ label {
   }
 }
 /* This complements `episode-title`. Used in the homapage and archive*/
-/* used to be `box_episode_title` */
-.alt_episode-title {
+/* TODO: rename this: `alt_episode-title`*/
+.box_episode_title {
   margin-top: 20%;
   font-size:1.2em;
   border-radius: 3px;
 }
 @media(max-width:561px) {
-  .alt_episode-title {
+  .box_episode_title {
     margin-top: 20%;
     font-size:1.6em;
     white-space: normal;
     padding: 0em;
     /*margin-top: 0.4em;*/
+  }
+}
+
+.vertical-line {
+  border-left: thick solid #ffc21c;
+  padding-left: 4em;
+}
+@media(max-width:768px) {
+ .vertical-line {
+  padding-left: 1em;
   }
 }
