--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -600,7 +600,6 @@ padding:40px;
 }
 
 
-/* CSS CLEANUP STOPPED HERE */
 .navbar-brand {
   padding: 0px 100px 20.5px 20px;
 }
@@ -610,14 +609,6 @@ padding:40px;
 }
 .navbarADpage_video {
   padding: 0px 250px 20.5px 20px;
-}
-@media(max-width: 1200px) and (min-width:767px){
-  .navbar-brand {
-    padding: 0px 0px 20.5px 20px;
-  }
-  .navbarADpage {
-    padding: 0px 0px 20.5px 20px;
-  }
 }
 @media(max-width: 1200px) and (min-width:768px){
   .navbar-brand {
@@ -634,24 +625,19 @@ padding:40px;
 }
 
 @media(max-width:400px) {
-
-.navbar-brand {
-  padding: 0;
-  max-width:250px;
-  width:70%;
-}
-
+  .navbar-brand {
+    padding: 0;
+    max-width:250px;
+    width:70%;
+  }
 }
 
 .navbar-default .navbar-toggle {
   border-color: #FFFFFF;
 }
 
-.nav-container {
-    background:#7B9699;
-}
 
-
+/* this media query with these classes isn't ever used */
 @media(min-width:768px) {
     header .container {
         padding-top: 300px;
@@ -664,6 +650,7 @@ padding:40px;
         font-size: 1.75em;
     }
 }
+
 @media(min-width:768px) {
 /* this says how  the nav bar transition happens, but not when */
     .navbar-fixed-top {
@@ -678,23 +665,21 @@ padding:40px;
         -moz-transition: all .3s;
         transition: all .3s;
     }
-    @media (max-width: 991px) {
-.navbar-fixed-top .navbar-brand {
-  font-size: 1.5em;
 
-
-}
-}
-    .navbar-fixed-top.navbar-shrink {
+    .navbar-fixed-top {
         padding: 10px 0;
 		background-color:#27282D;
     }
 
-    .navbar-fixed-top.navbar-shrink .navbar-brand {
+    .navbar-fixed-top .navbar-brand {
         font-size: 1.5em;
     }
 }
-
+@media (max-width: 991px) {
+  .navbar-fixed-top .navbar-brand {
+  font-size: 1.5em;
+  }
+}
 .navbar {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -702,10 +687,9 @@ padding:40px;
 }
 
 @media (max-width: 993px){
-.navbar-right {
-
-  font-size: .8em;
-}
+  .navbar-right {
+    font-size: .8em;
+  }
 }
 
 
@@ -717,27 +701,25 @@ padding:40px;
 
 
 @media(max-width:400px) {
-
 .navbar-brand {
-  padding: 0;
-  max-width:250px;
-  width:70%;
+    padding: 0;
+    max-width:250px;
+    width:70%;
+  }
 }
-}
-
 @media(max-width:768px) {
-.navbar-default {
-  background-color: #27282D;
-  border-color: transparent;
-  padding: 0px
-}
+  .navbar-default {
+    background-color: #27282D;
+    border-color: transparent;
+    padding: 0px
+  }
 }
 /* end of 'make the navbar solid throughout' */
+
 
 .navbar a:focus {
     outline: 0;
 }
-
 .navbar .navbar-nav {
     letter-spacing: 1px;
 }
@@ -751,7 +733,6 @@ padding:40px;
 section {
     padding: 70px 0;
 }
-
 section h2 {
     margin: 0;
     font-size: 2.5em;
@@ -762,7 +743,6 @@ section.success {
     color: #fff;
     background: #33353d;
 }
-
 @media(max-width:767px) {
     section {
         padding: 40px 0;
@@ -775,19 +755,18 @@ section.success {
 }
 
 @media (min-width: 1200px) {
-.col-lg-12 {
-  width: 100%;
-  /*padding: 0 0 50px 0;*/
+  .col-lg-12 {
+    width: 100%;
+    /*padding: 0 0 50px 0;*/
 }
-
 }
-
+/* useless stuff: START */
 @media(min-width:767px) {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
     }
 }
-
+/* useless stuff: END */
 .btn-outline {
     margin-top: 15px;
     border: solid 2px #fff;
@@ -851,6 +830,7 @@ section.success {
     border-left: 1px solid #33353D;
 }
 
+/*floating label with value/focus aren't used anywhere */
 .floating-label-form-group-with-value label {
     top: 0;
     opacity: 1;
@@ -932,6 +912,7 @@ footer .footer-below {
     outline: 0;
 }
 
+/* useless stuff: START */
 .portfolio-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
@@ -1017,30 +998,23 @@ footer .footer-below {
 .top-border-ireg {
 
 }
+/* useless stuff: END */
 
 
-
- .vertical-line {
-
-    border-left: thick solid #ffc21c;
+.vertical-line {
+  border-left: thick solid #ffc21c;
   padding-left: 4em;
 }
-
 @media(max-width:768px) {
-
  .vertical-line {
-
   padding-left: 1em;
-
+  }
 }
-}
 
- }
 
-}
- .form-control::-moz-placeholder {
-color: #CD9E1E;
-opacity: 1;
+.form-control::-moz-placeholder {
+  color: #CD9E1E;
+  opacity: 1;
  }
    .form-control:-ms-input-placeholder {
    color: #CD9E1E;
